--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whether Report</title>
-    <link rel="stylesheet" href="/JavaScript\indev.css">
+    <link rel="stylesheet" href="indev.css">
 </head>
 <body>
     <div class="card">
@@ -14,26 +14,26 @@
         <div class="search">
             <input type="text", placeholder="Enter City Name", spellcheck="false">
             <button class="button-35" role="button">
-                <span class="text"><img src="/JavaScript\images\search.png" alt=""></span>
+                <span class="text"><img src="images\search.png" alt=""></span>
               </button>
             <!-- <button><img src="images/search.png" alt=""></button> -->
         </div>
         <div class="weather">
-            <img src="/JavaScript\images\drizzle.png" class="weather-icon">
+            <img src="images\drizzle.png" class="weather-icon">
             <h1 class="temp">35°c</h1>
             <h2 class="city">Nagpur</h2>
             <h3 class="date">Date</h3>
             <h3 class="time">Time</h3>
             <div class="details">
                 <div class="col">
-                    <img src="/JavaScript\images\humidity.png">
+                    <img src="images\humidity.png">
                     <div>
                         <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="/JavaScript\images\wind.png">
+                    <img src="images\wind.png">
                     <div>
                         <p class="wind">15 Km/hr.</p>
                         <p>Wind Speed</p>
@@ -42,6 +42,6 @@
             </div>
         </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
